src/styles/Footer.css
.footer-container {
  background: #4a62ff !important;
  width: 100%;
  padding-bottom: 5vh;
}
.dark-footer-container {
  background: #1d1f28 !important;
}
.footer-logo {
  display: flex;
  justify-content: center;
  padding-top: 3vh;
  padding-bottom: 3vh;
}
.footer-logo img{
  width:15vw;
}
.footer-menu li a {
  padding: 10px 15px;
  color: var(--tezos-white);
  font-weight: bold;
}
.dark-footer-menu li a {
  color: var(--tezos-text);
}
.footer-menu {
  padding: 0 37vw;
  list-style: none;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: row;
  margin-top: 10px;
  cursor: pointer;
  margin-left: 5px;
}
.footer-align-img {
  width: 22px !important;
}
.footer-align-fb-img {
  width: 15px !important;
}
.footer-social-links {
  padding: 0 40vw;
  list-style: none;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: row;
  margin-top: 50px;
  cursor: pointer;
  margin-left: 10px;
}
.footer-copyright {
  text-align: center;
  margin-top: 30px;
  margin-left: 12px;
}
.footer-copyright p {
  color: var(--tezos-white);
  font-size: var(--font-size-mod-medium);
}
.dark-footer-copyright p {
  color: var(--tezos-text);
}
@media (min-width: 320px) and (max-width: 360px) {
  /* .footer-container {
    height: 50vh;
  } */
  .footer-menu {
    padding: 0 5px;
  }
  .footer-menu li a {
    padding: 5px 15px;
    font-size: 10px !important;
  }
  .footer-copyright {
    padding: 0 20px;
  }
  .footer-copyright p{
    font-size: 10px !important;
  }
  .footer-social-links img {
    padding: 0 25px;
    width: 4vw !important;
  }
  .footer-social-links {
    padding: 0 10vw;
    margin-top: 5vh !important;
  }
  .footer-logo img{
    width: 45vw !important;
  }
}
@media (min-width: 375px) and (max-width: 760px) {
  /* .footer-container {
    height: 50vh !important;
  } */
  .footer-menu {
    padding: 0 5px !important;
  }
  .footer-menu li a {
    padding: 5px 20px !important;
    font-size: 10px !important;
  }
  .footer-copyright {
    padding: 0 20px !important;
  }
  .footer-social-links img {
    padding: 0 25px !important;
    width: 3vw !important;
  }
  .footer-copyright p{
    font-size: 10px !important;
  }
  .footer-social-links {
    padding: 0 10vw !important;
    margin-top: 5vh !important;
  }
  .footer-logo img{
    width: 45vw !important;
  }
}
@media (min-width: 720px) and (max-width: 768px) {
  /* .footer-container {
    height: 80vh;
  } */
  .footer-menu {
    padding: 0 5px;
  }
  .footer-menu li a {
    padding: 5px 60px;
    font-size: 10px !important;
  }
  .footer-copyright {
    padding: 0 20px;
  }
  .footer-social-links img {
    padding: 0 25px;
    width: 18px !important;
  }
  .footer-copyright p{
    font-size: 10px !important;
  }
  .footer-social-links {
    padding: 0 10vw;
    margin-top: 7vh !important;
  }
  .footer-logo img{
    width: 25vw !important;
  }
}
@media (min-width: 769px) and (max-width: 1024px) {
  /* .footer-container {
    height: 90vh;
  } */
  .footer-menu {
    padding: 0 100px !important;
  }
  .footer-menu li a {
    padding: 5px 50px !important;
    font-size: 14px !important;
  }
  .footer-copyright {
    padding: 10px 20px;
  }
  .footer-social-links img {
    padding: 0 5vw !important;
    width: 2vw !important;
  }
  .footer-copyright p{
    font-size: 14px !important;
  }
  .footer-social-links {
    padding: 0 10vw;
    margin-top: 7vh !important;
  }
  .footer-logo img{
    width: 25vw !important;
  }
}

